@@ -123,6 +123,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #27014: Fix infinite recursion using typing.py.  Thanks to Kalle Tuure!
+
 - Issue #14132: Fix urllib.request redirect handling when the target only has
   a query string.  Original fix by Ján Janech.
 
